--- a/WebContent/assets/html/join.html
+++ b/WebContent/assets/html/join.html
@@ -140,7 +140,7 @@
               <div class="input-text">닉네임</div>
               <!-- <div class="input-text2">(변경 불가)</div> -->
             </div> <br>
-            <input type="text" placeholder="닉네임(2~10자)" name="userNickname" minlength="2" maxlength="10" required>
+            <input type="text" placeholder="닉네임(2~10자)" name="userNickname" id="nickName" minlength="2" maxlength="10" required>
             <br>
             <span id="nickname-error" class="error"></span>
             <span id="nickname-check" class="check"></span>
