조건에 안맞을때 회원가입 막기 완료/필수 약관동의 작성 중

--- a/WebContent/assets/html/join.html
+++ b/WebContent/assets/html/join.html
@@ -197,7 +197,7 @@
               </div>
             </div>
             <br><br><br>
-            <button type="submit" id="submit-button" class="submit-button">회원가입 완료</button>
+            <button type="button" id="submit-button" class="submit-button">회원가입 완료</button>
           </div>
         </form>
       </div>
